add translation tag for base and home

--- a/ArcsSystem/templates/home.html
+++ b/ArcsSystem/templates/home.html
@@ -80,9 +80,9 @@
                                     <div class="card mb-2 border-slider-content">
                                         <img class="d-block w-100" src="{% static "devplaceholder/hobby-5114150_1920.jpg" %}" alt="{% trans 'Second slide' %}">
                                         <div class="card-body content-slider">
-                                            <p class="font-weight-bold m-0">PROJECT FOCUS: Fauna and insects</p>
-                                            <p class="font-weight-bold m-0">DESCRIPTION: Monitoring of fauna for insect activity.</p>
-                                            <p class="font-weight-bold m-0">ONTACT POINT: Pavel Bina at SLU - [email or "button"]</p>
+                                            <p class="font-weight-bold m-0">{% trans "PROJECT FOCUS: Fauna and insects"%}</p>
+                                            <p class="font-weight-bold m-0">{% trans "DESCRIPTION: Monitoring of fauna for insect activity." %}</p>
+                                            <p class="font-weight-bold m-0">{% trans "ONTACT POINT: Pavel Bina at SLU - [email or button]" %}</p>
                                         </div>
                                     </div>
                                   </div>
@@ -95,9 +95,9 @@
                                     <div class="card mb-2 border-slider-content">
                                         <img class="d-block w-100" src="{% static "devplaceholder/library-438389_1920.jpg" %}" alt="{% trans 'Third slide' %}">
                                         <div class="card-body content-slider">
-                                            <p class="font-weight-bold m-0">PROJECT FOCUS: Fauna and insects</p>
-                                            <p class="font-weight-bold m-0">DESCRIPTION: Monitoring of fauna for insect activity.</p>
-                                            <p class="font-weight-bold m-0">ONTACT POINT: Pavel Bina at SLU - [email or "button"]</p>
+                                            <p class="font-weight-bold m-0">{% trans "PROJECT FOCUS: Fauna and insects"%}</p>
+                                            <p class="font-weight-bold m-0">{% trans "DESCRIPTION: Monitoring of fauna for insect activity." %}</p>
+                                            <p class="font-weight-bold m-0">{% trans "ONTACT POINT: Pavel Bina at SLU - [email or button]" %}</p>
                                       </div>
                                     </div>
                                   </div>
@@ -120,9 +120,7 @@
                 <h1>{% trans "Get involved with CitSciSE" %}</h1>
             </div>
             <div class="col-md-8 d-flex justify-content-center align-items-center">
-
                 <p class="mb-0">{% trans "If you would like to improve the content on CitSciSE or would like to learn more about how to integrate with CitSciSE. Please see our contact information below and the API for accessing the site's content." %}</p>
-
             </div>
         </div>
     </div>
