--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -334,9 +334,7 @@
             <img id="cc-by" src="{% static 'icons/CC-BY_icon.png' %}" alt="{% trans '' %}"/>
         </div>
         <div class="col-auto policy-footer-font d-flex justify-content-center align-items-center">
-            <p class="mb-0">{% trans "Except where otherwise" %} <a href="#"> {% trans "noted," %} </a> {% trans "content on this site is licensed under a" %} <a
-                    href="https://creativecommons.org/licenses/by/4.0/deed.{{ LANGUAGE_CODE }}"> {% trans "Creative Commons
-                Attribution 4.0 International License." %}</a></p>
+            <p class="mb-0">{% trans "Except where otherwise" %} <a href="#"> {% trans "noted," %} </a> {% trans "content on this site is licensed under a" %} <a href="https://creativecommons.org/licenses/by/4.0/deed.{{ LANGUAGE_CODE }}"> {% trans "Creative Commons Attribution 4.0 International License." %}</a></p>
         </div>
     </div>
 </div>
