--- a/ArcsSystem/templates/publications/article_publications_list.html
+++ b/ArcsSystem/templates/publications/article_publications_list.html
@@ -2,56 +2,44 @@
 {% load static %}
 {% load i18n %}
 {% load workpackages_extras %}
-
 {% block content %}
+    <center>
+        <div class="search-list">
+            <h1 class="search-list"> {% trans "Search publications on citizen science" %}</h1>
+            <p><i>For example: bird</i></p>
+            <form action="search" method="get">
+                <!-- SEARCH MODES -->
+                <input type="radio" id="general" name="searchmode" value="general" checked="checked">
+                <label for="searchmode">General search</label>
+                <input type="radio" id="author" name="searchmode" value="author">
+                <label for="searchmode">Author search</label>
+                <input type="radio" id="keyword" name="searchmode" value="keyword">
+                <label for="searchmode">Keyword search</label>
+                <br>
+                <!-- SEARCH BOX -->
+                <input name="q" type="text" placeholder="Search publications...">
+                <input type="submit" value="Submit">
+                <!-- SORT MODES -->
+                <br>
+                <input type="radio" id="year" name="sortmethod" value="year" checked="checked">
+                <label for="sortmethod">Sort by year</label>
+                <input type="radio" id="title" name="sortmethod" value="title">
+                <label for="title">Sort by title</label>
+                <input type="radio" id="author" name="sortmethod" value="author">
+                <label for="author">Sort by author</label>
 
-<center>
+            </form>
+        </div>
+    </center>
 
-<div class="search-list">
-    <h1 class="search-list"> {% trans "Search publications on citizen science" %}</h1>
-
-    <p><i>For example: bird</i></p>
-
-    <form action="search" method="get">
-    <!-- SEARCH MODES -->
-    <input type="radio" id="general" name="searchmode" value="general" checked="checked" >
-        <label for="searchmode">General search</label>
-    <input type="radio" id="author" name="searchmode" value="author">
-            <label for="searchmode">Author search</label>
-    <input type="radio" id="keyword" name="searchmode" value="keyword">
-              <label for="searchmode">Keyword search</label>
-
-
-              <br>
-    <!-- SEARCH BOX -->
-
-      <input name="q" type="text" placeholder="Search publications...">
-      <input type="submit" value="Submit">
-
-
-     <!-- SORT MODES -->
-      <br>
-      <input type="radio" id="year" name="sortmethod" value="year" checked="checked" >
-          <label for="sortmethod">Sort by year</label>
-      <input type="radio" id="title" name="sortmethod" value="title">
-          <label for="title">Sort by title</label>
-      <input type="radio" id="author" name="sortmethod" value="author">
-          <label for="author">Sort by author</label>
-
-    </form>
-
-</center>
-
-<!-- Display initial results
+    <!-- Display initial results
     {% for article in object_list %}
     <div class="search-list">
       <p><a href="{{ article.get_absolute_url }}">{{ article.title }}</a> {{ article.py }} {{ article.authors }} </p>
-      <p>{{ article.source }} Volume: {{ article.volume }} Issue: {{ article.issue }} <a href="https://doi.org/{{ article.doi }}">Fulltext</a></p>
+      <p>{{ article.source }} Volume: {{ article.volume }} Issue: {{ article.issue }} <a href="https://doi.org/
+        {{ article.doi }}">Fulltext</a></p>
     </div>
     {% endfor %}
 -->
-
-</div>
-
-
+    </div>
 {% endblock content %}
