fixed broken link

--- a/ArcsSystem/templates/nav_main.html
+++ b/ArcsSystem/templates/nav_main.html
@@ -60,7 +60,7 @@
 
                         <div class="dropdown-divider"></div>
 
-                          <a class="dropdown-item font-weight-bold" href="people/users/">{%trans "List of contributors" %}</a>
+                          <a class="dropdown-item font-weight-bold" href="/people/users/">{%trans "List of contributors" %}</a>
 
                     </ul>
 
