fixes in theme_view

--- a/ArcsSystem/templates/workpackages/theme_view.html
+++ b/ArcsSystem/templates/workpackages/theme_view.html
@@ -50,8 +50,7 @@
                     <div class="row">
                         <div class="col-4 col-lg-4 col-md-0 "></div>
                         <div class="col-4 col-sm-12 col-md-12 col-lg-5 ">
-                            <h5 align="center">{% trans "Lägg till nyckelord, gärna med översättnig i motsvarande fält på samma
-                                rad" %}</h5>
+                            <h5 align="center">{% trans "Lägg till nyckelord, gärna med översättnig i motsvarande fält på samma rad" %}</h5>
                             <div class="row">
                                 <button type="button" onclick="add_keyword_input_line()" class="col-6 form-control"
                                         style="height: 60px; background: MediumSeaGreen; color: white;"><h4>Add </h4>
@@ -98,7 +97,7 @@
                     </div>
                 </div>
             </form>
-            <script type="text/javascript">{% trans "Selected theme:" %}
+            <script type="text/javascript">
                 function add_keyword_input_line(sv, en) {
                     if (count < 10) {
                         count += 1
