--- a/ArcsSystem/templates/publications/article_publications_detail.html
+++ b/ArcsSystem/templates/publications/article_publications_detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load i18n %}
 {% load publications_extras %}
+{% load keyword_extras %}
+
 
 {% block content %}
     <div class="detail-view">
