--- a/ArcsSystem/static/css/base.css
+++ b/ArcsSystem/static/css/base.css
@@ -301,6 +301,10 @@ font-family: Helvetica;
 
 }
 
+.tab-pane{
+    padding:20px !important;
+}
+
 #form-search-nev{
     float: right;
 }
@@ -654,8 +658,8 @@ font-family: Helvetica;
 
 
 .detail-view{
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 0px;
+  margin-right: 0px;
   margin-top: 40px;
   margin-bottom: 40px;
 }
