--- a/ArcsSystem/templates/projects/project_detail.html
+++ b/ArcsSystem/templates/projects/project_detail.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
-<<<<<<< HEAD
 {% load keyword_extras %}
 
 
@@ -21,100 +20,90 @@
   <script type="text/javascript">
     console.log("{{ get_object }}")
   </script>
-  
+
   <hgroup class="detail-view">
     <h1>{{ object.name }}</h1>
   </hgroup>
-=======
-{% block content %}
 
-    {% if edit %}
-        <div class="col-md-2">
-            <a class="form-control" href="edit/">edit</a>
-        </div>
-    {% endif %}
-
-    <article>
-        <hgroup class="detail-view">
-            <h1>{{ object.name }}</h1>
-        </hgroup>
->>>>>>> design
-
-        <!--   <picture class="detail-view">
-
+<!--   <picture class="detail-view">
     {# TODO implement additional web image format handling #}
     <source srcset="name.webp" type="image/webp" alt="{#TODO alt text#}">{#Webp image support first#}
 		<source srcset="name.jpg" type="image/jpg" alt="{#TODO alt text#}">{#jpg support next#}
     <img src="{{ object.image_dir }}"  alt="{% blocktrans %}Bild för projektet {{ object.name }}{% endblocktrans %}" width="300" height="300"/>
   </picture> -->
 
-        {% if object.image %}
+{% if object.image %}
 
-            <picture class="detail-view">
+<picture class="detail-view">
 
-                <img src="{{ object.image.url }}" alt="{% trans 'Responsive image' %}"
-                     style="width: 200px; height: 200px;"/>
+<img  src="{{object.image.url}}" alt="{% trans 'Responsive image' %}" style="width: 200px; height: 200px;" />
 
-            </picture>
-        {% else %}
-            {{ object.image }}
+  </picture>
 
-
-            <div style="height: 100px; background: coral">
-                <h5 align="center"> No image</h5>
-            </div>
+{% else %}
 
 
-        {% endif %}
+{{object.image}}
 
 
-        <div class="detail-view">
-            <h2>{% trans "Project information" %}</h2>
-        </div>
-
-        <div class="detail-view " style="border: solid black 1px ">
-            <h3>{% trans "PROJECT AIM:" %}</h3>
-            <p>{{ object.aim|safe }}</p>
-        </div>
+  <div style="height: 100px; background: coral">
 
 
-        <div class="detail-view">
-            <h3>{% trans "PROJECT DESCRIPTION:" %}</h3>
-            <p>{{ object.description|safe }}</p>
-        </div>
-
-        <div class="detail-view">
-            <h3>{% trans "PROJECT STATUS:" %}</h3>
-            <p>{{ object.get_status_name }}</p>
-        </div>
+  <h5 align="center"  > No image</h5>
+  </div>
 
 
-        <div class="detail-view">
-            <h3>{% trans "PROJECT TARGET AUDIENCE:" %}</h3>
-            <p>{{ object.target_audience }}</p>
-        </div>
+{% endif %}
 
-        <div class="detail-view">
-            <h3>{% trans "PROJECT RECORD LAST UPDATED:" %}</h3>
-            <p>{# TODO Insert last updated field when created in the model #}</p>
-        </div>
 
-        <div class="detail-view">
-            <h3>{% trans "MEDIA LINKS:" %}</h3>
-            <ul>
-            </ul>
-        </div>
+  <div class="detail-view">
+    <h2>{% trans "Project information" %}</h2>
+  </div>
 
-        <div class="detail-view">
-            <h2>{% trans "Contact information" %}</h2>
-            <h3>{% trans "NAME:" %} {{ object.contact_name }}</h3>
-            <h3>{% trans "CONTACT'S ROLE:" %} {{ object.contact_role }}</h3>
-            <h3>{% trans "AFFILIATION:" %} {{ object.contact_affiliation }}</h3>
-            <h3>{% trans "CONTACT EMAIL:" %} {{ object.contact_email }}</h3>
-            <h3>{% trans "CONTACT PHONE:" %} {{ object.contact_phone }}</h3>
-        </div>
+    <div class="detail-view " style="border: solid black 1px ">
+    <h3>{% trans "PROJECT AIM:" %}</h3>
+    <p>{{ object.aim|safe }}</p>
+  </div>
 
-<<<<<<< HEAD
+
+
+
+  <div class="detail-view">
+    <h3>{% trans "PROJECT DESCRIPTION:" %}</h3>
+    <p>{{ object.description|safe  }}</p>
+  </div>
+
+  <div class="detail-view">
+    <h3>{% trans "PROJECT STATUS:" %}</h3>
+    <p>{{ object.get_status_name }}</p>
+  </div>
+
+
+  <div class="detail-view">
+    <h3>{% trans "PROJECT TARGET AUDIENCE:" %}</h3>
+    <p>{{ object.target_audience}}</p>
+  </div>
+
+  <div class="detail-view">
+      <h3>{% trans "PROJECT RECORD LAST UPDATED:" %}</h3>
+      <p>{# TODO Insert last updated field when created in the model #}</p>
+  </div>
+
+  <div class="detail-view">
+      <h3>{% trans "MEDIA LINKS:" %}</h3>
+      <ul>
+      </ul>
+  </div>
+
+  <div class="detail-view">
+    <h2>{% trans "Contact information" %}</h2>
+    <h3>{% trans  "NAME:" %} {{ object.contact_name }}</h3>
+    <h3>{% trans "CONTACT'S ROLE:" %} {{ object.contact_role }}</h3>
+    <h3>{% trans "AFFILIATION:" %} {{ object.contact_affiliation }}</h3>
+    <h3>{% trans "CONTACT EMAIL:" %} {{ object.contact_email }}</h3>
+    <h3>{% trans "CONTACT PHONE:" %} {{ object.contact_phone }}</h3>
+  </div>
+
 
 
 
@@ -129,12 +118,6 @@
 
 </article>
 
-=======
-    </article>
-
-    <br><br><br><br>
-    <hr><br><br><br><br>
->>>>>>> design
 
 
 
